src/objects/Opp_Project_Field_Map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Default_Value__c</fullName>
        <inlineHelpText>Value to insert if the mapped field value on the Opportunity is blank. This currently only works for Text field types. Numeric and date will not work.</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to remove this field mapping from the conversion process</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Field_Name__c</fullName>
        <label>Project Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <inlineHelpText>Determines the Order Displayed on the Opp to Project Conversion Screen</inlineHelpText>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opp Project Field Map</label>
</CustomObject>